--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,7 +1,6 @@
 {
   "name": "module-13-challenge-orm",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,18 +10,23 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+    "url": "git+https://github.com/JayneValverde/e-commerce-backend-orm.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jayne Valverde",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.3"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
-  }
+    "mysql2": "^2.3.3",
+    "sequelize": "^5.22.5"
+  },
+  "bugs": {
+    "url": "https://github.com/JayneValverde/e-commerce-backend-orm/issues"
+  },
+  "homepage": "https://github.com/JayneValverde/e-commerce-backend-orm#readme",
+  "description": ""
 }
